# project_helix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  project_helix.cpp  util.c  util.cpp  util.h
Documents/: Beschreibung.tex
Konzepte/blender/Schiff1/: cruiser.blend  cruiser.blend1  cruiser.blend2
Konzepte/blender/chronos_station/: chronos_station.blend  chronos_station.blend1  chronos_station.blend2
Konzepte/blender/reaper/: reaper.blend  reaper.blend1  reaper.blend2
Objects/: sphere.cpp
Textures/: Quellen.txt  Quellen.txt~
interactors/: KeyboardEventHandler.cpp  KeyboardEventHandler.h
objects/: asteroid.cpp  asteroid.h  nebula.cpp  nebula.h  rotator.cpp  rotator.h  ship.cpp  ship.h  sphere.cpp  sphere.h  sun.cpp  sun.h  torus.cpp  torus.h
resources/: chronos_station.mtl  cruiser.mtl  particle_2.rgb  reaper.mtl
runners/: asteroid.cpp  rotator.cpp  sphere.cpp  sun.cpp  torus.cpp
scenes/: MainScene.cpp  MainScene.h
src/: CMakeLists.txt  config.h.in  project_helix.cpp  util.cpp  util.h
src/animation/: MissileNodeCallback.cpp  MissileNodeCallback.h  ShipNodeCallback.cpp  ShipNodeCallback.h
src/interactors/: KeyboardEventHandler.cpp  KeyboardEventHandler.h
src/objects/: Asteroid.cpp  Asteroid.h  AsteroidField.cpp  AsteroidField.h  Chronos.cpp  Chronos.h  Comet.cpp  Comet.h  Fins.cpp  Fins.h  Missile.cpp  Missile.h  Nebula.cpp  Nebula.h  PlanetRing.cpp  PlanetRing.h  Reaper.cpp  Reaper.h  Rectangle.cpp  Rectangle.h  Rotator.cpp  Rotator.h  Ship.cpp  Ship.h  Skybox.cpp  Skybox.h  Sphere.cpp  Sphere.h  Sun.cpp  Sun.h  Torus.cpp  Torus.h
src/runners/: asteroid.cpp  missile.cpp  nebula.cpp  planet.cpp  rectangle.cpp  rotator.cpp  ship.cpp  skybox.cpp  sphere.cpp  station.cpp  sun.cpp  torus.cpp
src/scenes/: MainScene.cpp  MainScene.h  ShadowedScene.cpp  ShadowedScene.h  scene.cpp  scene_utils.cpp  scene_utils.h
src/views/: CockpitView.cpp  CockpitView.h  MainView.cpp  MainView.h  ShipView.cpp  ShipView.h  View.h
views/: MainView.cpp  MainView.h  View.h
